<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".ForecastFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/Mon"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="12pt"
            android:layout_height="12pt"
            android:layout_gravity="center"
            android:layout_marginLeft="24pt"
            android:layout_marginRight="24pt"
            android:src="@drawable/sun" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/weather_temperature"
            android:textSize="6pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/Tue"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="12pt"
            android:layout_height="12pt"
            android:layout_gravity="center"
            android:layout_marginLeft="24pt"
            android:layout_marginRight="24pt"
            android:src="@drawable/sun" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/weather_temperature"
            android:textSize="6pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/Wed"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="12pt"
            android:layout_height="12pt"
            android:layout_gravity="center"
            android:layout_marginLeft="24pt"
            android:layout_marginRight="24pt"
            android:src="@drawable/sun" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/weather_temperature"
            android:textSize="6pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/Thu"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="12pt"
            android:layout_height="12pt"
            android:layout_gravity="center"
            android:layout_marginLeft="24pt"
            android:layout_marginRight="24pt"
            android:src="@drawable/sun" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/weather_temperature"
            android:textSize="6pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/Fri"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="12pt"
            android:layout_height="12pt"
            android:layout_gravity="center"
            android:layout_marginLeft="24pt"
            android:layout_marginRight="24pt"
            android:src="@drawable/sun" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/weather_temperature"
            android:textSize="6pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/Sat"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="12pt"
            android:layout_height="12pt"
            android:layout_gravity="center"
            android:layout_marginLeft="24pt"
            android:layout_marginRight="24pt"
            android:src="@drawable/sun" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/weather_temperature"
            android:textSize="6pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/Sun"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="12pt"
            android:layout_height="12pt"
            android:layout_gravity="center"
            android:layout_marginLeft="24pt"
            android:layout_marginRight="24pt"
            android:src="@drawable/sun" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/weather_temperature"
            android:textSize="6pt" />
    </LinearLayout>
</LinearLayout>